--- a/gaussian_splatting_colab.ipynb
+++ b/gaussian_splatting_colab.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "lxVPhjZpZp6z",
       "metadata": {
         "colab": {
@@ -13,8 +13,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2025-07-01 12:04:11--  https://repo.anaconda.com/miniconda/Miniconda3-py37_23.1.0-1-Linux-x86_64.sh\n",
             "Resolving repo.anaconda.com (repo.anaconda.com)... 104.16.32.241, 104.16.191.158, 2606:4700::6810:20f1, ...\n",
@@ -94,8 +94,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2025-07-01 12:16:10--  https://developer.download.nvidia.com/compute/cuda/11.8.0/local_installers/cuda_11.8.0_520.61.05_linux.run\n",
             "Resolving developer.download.nvidia.com (developer.download.nvidia.com)... 23.199.47.84\n",
@@ -139,8 +139,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Found existing installation: torch 1.12.1+cu116\n",
             "Uninstalling torch-1.12.1+cu116:\n",
@@ -189,8 +189,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "True\n",
             "12.4\n",
@@ -218,8 +218,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Tue Jul  1 12:08:00 2025       \n",
             "+-----------------------------------------------------------------------------------------+\n",
@@ -250,10 +250,8 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "%cd /content\n",
-        "!rm -rf gaussian-splatting\n"
-      ],
+      "execution_count": 11,
+      "id": "MPwKbkP95AVB",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -261,16 +259,18 @@
         "id": "MPwKbkP95AVB",
         "outputId": "1003ed64-c59a-4480-dbf3-006356eec6c8"
       },
-      "id": "MPwKbkP95AVB",
-      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content\n"
           ]
         }
+      ],
+      "source": [
+        "%cd /content\n",
+        "!rm -rf gaussian-splatting\n"
       ]
     },
     {
@@ -286,8 +286,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content\n",
             "fatal: destination path 'gaussian-splatting' already exists and is not an empty directory.\n",
@@ -314,16 +314,16 @@
       "execution_count": 21,
       "id": "-ry5cwy3aZlL",
       "metadata": {
-        "id": "-ry5cwy3aZlL",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "-ry5cwy3aZlL",
         "outputId": "49e59407-9369-4e9c-c0c1-f27f09d48278"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
             "/content/gaussian-splatting\n"
@@ -342,11 +342,8 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!ls -R ./data/output\n",
-        "\n",
-        "\n"
-      ],
+      "execution_count": 32,
+      "id": "Zz6zhmpF9hkH",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -354,12 +351,10 @@
         "id": "Zz6zhmpF9hkH",
         "outputId": "95e7c4e8-0b94-43ec-9dae-988fa3807a05"
       },
-      "id": "Zz6zhmpF9hkH",
-      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "./data/output:\n",
             "database.db  images  sparse\n",
@@ -395,6 +390,11 @@
             "cameras.bin  images.bin  points3D.bin  project.ini\n"
           ]
         }
+      ],
+      "source": [
+        "!ls -R ./data/output\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -402,16 +402,16 @@
       "execution_count": 35,
       "id": "7hA8a_2GaCaO",
       "metadata": {
-        "id": "7hA8a_2GaCaO",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "7hA8a_2GaCaO",
         "outputId": "f809b771-7aa5-4c4c-bbe1-dacb010ff002"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Optimizing \n",
             "Output folder: ./output/3613a7ff-c [01/07 12:57:05]\n",
@@ -449,9 +449,8 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!ls /content/gaussian-splatting/output/3613a7ff-c"
-      ],
+      "execution_count": 51,
+      "id": "u5DFAWu4OWS6",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -459,16 +458,17 @@
         "id": "u5DFAWu4OWS6",
         "outputId": "e542d933-df75-46e5-96f8-a964e1b55ce6"
       },
-      "id": "u5DFAWu4OWS6",
-      "execution_count": 51,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "cameras.json  cfg_args\tinput.ply  point_cloud\n"
           ]
         }
+      ],
+      "source": [
+        "!ls /content/gaussian-splatting/output/3613a7ff-c"
       ]
     },
     {
@@ -476,17 +476,17 @@
       "execution_count": 48,
       "id": "00049e94",
       "metadata": {
-        "id": "00049e94",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
         },
+        "id": "00049e94",
         "outputId": "2e4edf98-fd07-4ba4-9949-5d53cfbf533e"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "  adding: content/gaussian-splatting/output/3613a7ff-c/ (stored 0%)\n",
             "  adding: content/gaussian-splatting/output/3613a7ff-c/point_cloud/ (stored 0%)\n",
@@ -500,68 +500,24 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
+            "application/javascript": "\n    async function download(id, filename, size) {\n      if (!google.colab.kernel.accessAllowed) {\n        return;\n      }\n      const div = document.createElement('div');\n      const label = document.createElement('label');\n      label.textContent = `Downloading \"${filename}\": `;\n      div.appendChild(label);\n      const progress = document.createElement('progress');\n      progress.max = size;\n      div.appendChild(progress);\n      document.body.appendChild(div);\n\n      const buffers = [];\n      let downloaded = 0;\n\n      const channel = await google.colab.kernel.comms.open(id);\n      // Send a message to notify the kernel that we're ready.\n      channel.send({})\n\n      for await (const message of channel.messages) {\n        // Send a message to notify the kernel that we're ready.\n        channel.send({})\n        if (message.buffers) {\n          for (const buffer of message.buffers) {\n            buffers.push(buffer);\n            downloaded += buffer.byteLength;\n            progress.value = downloaded;\n          }\n        }\n      }\n      const blob = new Blob(buffers, {type: 'application/binary'});\n      const a = document.createElement('a');\n      a.href = window.URL.createObjectURL(blob);\n      a.download = filename;\n      div.appendChild(a);\n      a.click();\n      div.remove();\n    }\n  ",
             "text/plain": [
               "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "application/javascript": "download(\"download_bc875416-1f54-45e6-a9eb-c6512ba0a811\", \"3613a7ff-c.zip\", 78822214)",
             "text/plain": [
               "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "download(\"download_bc875416-1f54-45e6-a9eb-c6512ba0a811\", \"3613a7ff-c.zip\", 78822214)"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
